# cps

./: .env.example  .gitattributes  .gitignore  .secrets.baseline  AGENTS.md  Dockerfile  README.md  alembic.ini  package-lock.json  package.json  pyproject.toml
.husky/: assert_staged_worktree_sync.py  pre-commit  run_detect_secrets_on_staged.py
alembic/: env.py
alembic/versions/: 20260720_0001_initial_persistence.py  20260722_0002_sprint2_credentials.py  20260723_0003_inventory_schema.py  20260723_0004_inventory_sync.py  20260723_0005_targeted_refresh.py  20260724_0006_sprint7_scope_identity.py  20260724_0007_identity_roles_quotas.py  20260724_0008_sprint9_network_control.py
deploy/docker/: .env.example  README.md  docker-compose.yml
docs/: instance-provisioning.md
docs/ai/: review-checklists.md  vibe-coding-workflow.md
docs/runbooks/: sprint-5-recovery.md
plan/: README.md  product-backlog.md
plan/sprints/: SPRINT_TEMPLATE.md  sprint-0.md  sprint-1.md  sprint-10.md  sprint-1b.md  sprint-2.md  sprint-3.md  sprint-4.md  sprint-5.md  sprint-6.md  sprint-7.md  sprint-8.md  sprint-9.md
src/cps/: __init__.py  cli.py  config.py  identifiers.py  main.py  runtime.py
tests/: conftest.py
tests/contract/: test_connection_validation_contract.py  test_contract_manifest.py  test_delivery_contract.py  test_envelope_contract.py  test_error_contract.py  test_instance_contract.py  test_inventory_batch_contract.py
tests/integration/: test_health_ready.py
tests/unit/: test_app_factory.py  test_ci_workflow.py  test_correlation.py  test_db_url.py  test_health.py  (+7 more)
(+186 files in other folders)
